# FastAPI-Backend-Template

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTAINER.md  README.md  codecov.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  README.md
.github/workflows/: ci-backend.yaml  ci-frontend.yaml
Template-Guide/Step1/: README.md
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: endpoints.py
backend/src/api/dependencies/: repository.py  session.py
backend/src/api/routes/: account.py  authentication.py
backend/src/config/: events.py  manager.py
backend/src/config/settings/: base.py  development.py  environment.py  production.py  staging.py
backend/src/models/domains/: account.py
backend/src/models/schemas/: account.py  base.py  jwt.py
backend/src/repository/: base.py  database.py  events.py  table.py
backend/src/repository/crud/: account.py  base.py
backend/src/repository/migrations/: env.py
backend/src/repository/migrations/versions/: 2022_12_07_2056-76e539d83a84_initial_migration_for_account_table.py  2022_12_09_1825-60d1844cb5d3_initial_migration_fo_account_table.py
backend/src/securities/authorizations/: jwt.py
backend/src/securities/hashing/: hash.py  password.py
backend/src/securities/verifications/: credentials.py
backend/src/utilities/exceptions/: database.py  password.py
backend/src/utilities/exceptions/http/: exc_400.py  exc_401.py  exc_403.py  exc_404.py
backend/src/utilities/formatters/: datetime_formatter.py  field_formatter.py
backend/src/utilities/messages/exceptions/http/: exc_details.py
backend/tests/: conftest.py
backend/tests/unit_tests/: test_src.py
frontend/: .eslintignore  .eslintrc.cjs  .eslintrc.json  .prettierrc.json  Dockerfile  README.md  entrypoint.sh  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.test.tsx  App.tsx  index.tsx
